solved a problem using C++ for the first time in a while

--- a/practice_in_C++/.vscode/settings.json
+++ b/practice_in_C++/.vscode/settings.json
@@ -4,6 +4,7 @@
         "algorithm": "cpp",
         "__split_buffer": "cpp",
         "deque": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "utility": "cpp"
     }
 }
